--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,18 +4,15 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      人生を変えるフリマアプリ
+      気になるお金のこと、
+      相談してみよう
     </h2>
     <p class='service-explain'>
-      FURIMAはだれでもかんたんに出品・購入できる
+      Money Communityは気軽にお金のことを相談できる
     </p>
     <p class='service-explain'>
-      フリマアプリです
+      コミュニティーサイトです
     </p>
-    <div class='store-btn'>
-      <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
-      <%= link_to image_tag("dl-android.png", class:"google-btn"), "#" %>
-    </div>
   </div>
   <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
 
@@ -76,10 +73,6 @@
     <p class='ad-explain'>
       ほしかったあの商品に出会えるかもしれません。
     </p>
-    <div class='store-btn'>
-      <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
-      <%= link_to image_tag("dl-android.png", class:"google-btn"), "#" %>
-    </div>
   </div>
   <%# /画面中央の「会員数日本一位」帯部分 %>
 
@@ -90,9 +83,9 @@
     </h2>
     <ul class='feature-lists'>
       <li class='list'>
-        <%= image_tag "furima-intro04.png", class:"list-pict" %>
+        <%= image_tag "image1.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          簡単に売り買いできる
+          お金に関するお悩みを共有できる
         </h3>
         <p class='feature-list-description'>
           スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
@@ -137,6 +130,7 @@
             <span>Sold Out!!</span>
           </div>
           <%# //商品が売れていればsold outを表示しましょう %>
+          
 
         </div>
         <div class='item-info'>
