--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -9,7 +9,7 @@ a {
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
   width: 100vw;
-  background-image: image-url('furima-header01.png');
+  background-image: url('https://www.illust-box.jp/db_img/sozai/00017/171770/20210402132825_60669d69951fa.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -19,7 +19,7 @@ a {
   justify-content: center;
   padding: 5vh 15vw;
   color: #fff;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+  /*text-shadow: 0 0 5px rgba(0, 0, 0, 0.9); */
 }
 
 .service-title {
@@ -29,20 +29,6 @@ a {
 .service-explain {
   font-size: 2.5vh;
   line-height: 40px;
-}
-
-.store-btn {
-  display: flex;
-  margin-top: 24px;
-}
-
-.apple-btn {
-  margin-right: 1vw;
-  height: 9vh;
-}
-
-.google-btn {
-  height: 9vh;
 }
 
 /* //画面上部の「人生を変えるフリマアプリ」帯部分 */
@@ -99,7 +85,7 @@ a {
   font-size: 30px;
   text-align: center;
   line-height: 60px;
-  background-color: #3ccace;
+  background-color: #D0B0FF;
   color: #fff;
 }
 
@@ -110,7 +96,7 @@ a {
 }
 
 .reason-list-blue-text {
-  color: #3ccace;
+  color: #D0B0FF;
 }
 
 .reason-list-description {
@@ -180,7 +166,7 @@ a {
   content: '';
   width: 70px;
   height: 4px;
-  background-color: #3ccace;
+  background-color: #D0B0FF;
   position: absolute;
   bottom: -10px;
   left: 50%;
@@ -233,7 +219,7 @@ a {
   font-size: 3vh;
   margin: 1vh 0;
   text-decoration: none;
-  color: #3ccace;
+  color: #D0B0FF;
   font-weight: bold;
 }
 
