--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -110,7 +110,7 @@ a {
 /* 画面中央の「会員数日本一位」帯部分*/
 .ad-contents {
   width: 100vw;
-  background-image: image-url('furima-header02.png');
+  background-image: url('https://www.illust-box.jp/db_img/sozai/00017/171770/20210402132825_60669d69951fa.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
