--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -3,7 +3,7 @@
 
 .ad-footer-contents {
   width: 100vw;
-  background-image: image-url('furima-footer.png');
+  background-image: url('https://www.illust-box.jp/db_img/sozai/00017/171770/20210402132825_60669d69951fa.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -13,7 +13,7 @@
   justify-content: center;
   padding: 5vh 15vw;
   color: #fff;
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+  // text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
 }
 
 .ad-footer-title {
