--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -108,7 +108,7 @@ sub {
 input,
 textarea,
 select {
-  font-family:inherit;
+  font-family:Noto Sans Japaneze;
   font-size:inherit;
   font-weight:inherit;
 }
