--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,12 @@
 <%# 下部広告部分 %>
-<div class='ad-footer-contents'>
+<%# <div class='ad-footer-contents'>
   <p class='ad-footer-explain'>
     だれでもかんたん、人生を変えるフリマアプリ
   </p>
   <h2 class='ad-footer-title'>
     今すぐ無料ダウンロード！
   </h2>
-</div>
+</div> %>
 <%# /下部広告部分 %>
 
 <div class='footer'>
@@ -35,6 +35,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("furima-logo-white.png", class:"logo-white"), "#" %>
+  <%= link_to image_tag("logow.jpeg", class:"logo-white"), "#" %>
   <p>© Mocoty</p>
 </div>
