--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
       相談してみよう
     </h2>
     <p class='service-explain'>
-      Money Communityは気軽にお金のことを相談できる
+      『Money Community』は気軽にお金のことを相談できる
     </p>
     <p class='service-explain'>
       コミュニティーサイトです
@@ -25,7 +25,7 @@
       <li class='list'>
         <%= image_tag "image1.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          お金に関するお悩みを共有できる
+          お金のお悩みを共有できる
         </h3>
         <p class='feature-list-description'>
           スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
