--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -35,6 +35,6 @@
       </ul>
     </div>
   </div>
-  <%= link_to image_tag("logow.jpeg", class:"logo-white"), "#" %>
+  <%= link_to image_tag("logow.png", class:"logo-white"), "#" %>
   <p>© Mocoty</p>
 </div>
