--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -2,7 +2,7 @@
 
 
 .items-sell-contents {
-  background-color: #f5f5f5;
+  background-color: #fff;
   font-family: "Source Sans Pro", Helvetica, Arial, "æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“", "YuGothic", "ãƒ¡ã‚¤ãƒªã‚ª", "Meiryo", sans-serif;
   font-size: 14px;
   display: flex;
@@ -31,7 +31,7 @@
 
 /* 共通 */
 .indispensable {
-  background: #ea352d;
+  background: #FF69A3;
   margin-left: 8px;
   padding: 3px;
   border-radius: 2px;
@@ -126,42 +126,8 @@
 .select-box {
   margin: 2vh 0;
 }
-
 /* /商品の詳細など */
 
-/* 販売価格 */
-.sell-price {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.price-content {
-  width: 300px;
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.price-text {
-  /* min-width: 170px; */
-  display: flex;
-  align-items: center;
-}
-
-.sell-yen {
-  font-size: 18px;
-}
-
-.price-input {
-  height: 30px;
-  text-align: right;
-  padding-right: 10px;
-}
-
-/* /販売価格 */
 
 /* 注意書き */
 .caution {
@@ -169,7 +135,7 @@
 }
 
 .sentence>a {
-  color: #0099e8;
+  color: #B384FF;
   text-decoration: none;
 }
 
@@ -182,8 +148,8 @@
 }
 
 .sell-btn {
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #FF69A3;
+  border: 1px solid #FF69A3;
   color: #fff;
   width: 100%;
   height: 50px;
@@ -202,7 +168,7 @@
 /* /下部ボタン */
 
 .items-sell-footer {
-  background-color: #f5f5f5;
+  background-color: #fff;
   width: 60vw;
   padding: 3ch 0;
   display: flex;
