--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -50,7 +50,7 @@
 }
 
 
-.item-red-btn {
+.post-edit-btn {
   text-align: center;
   background-color: #ea352d;
   font-size: 24px;
@@ -64,7 +64,7 @@
   font-size: 20px;
 }
 
-.item-destroy {
+.post-destroy {
   background-color: lightgray;
   text-align: center;
   font-size: 24px;
@@ -73,7 +73,7 @@
   padding: 2vh 10vw;
 }
 
-.item-explain-box {
+.post-explain-box {
   font-size: 18px;
   margin: 40px 0px;
   overflow-wrap: anywhere;
@@ -84,7 +84,7 @@
   width: 100%;
 }
 
-.detail-item {
+.detail-post {
   width: 20%;
   background-color: #eee;
   border: 1px solid #dedede;
@@ -98,6 +98,22 @@
   border: 1px solid #dedede;
   font-size: 14px;
 }
+
+.detail-post-a {
+  width: 20%;
+  background-color: #eee;
+  border: 1px solid #dedede;
+  font-size: 14px;
+  text-align: center;
+}
+
+.detail-value-a {
+  width: 80%;
+  padding: 200px;
+  border: 1px solid #dedede;
+  font-size: 14px;
+}
+
 
 .option {
   display: flex;
