--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="items-sell-contents">
   <header class="items-sell-header">
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
+    <%= link_to image_tag('logo2.png' , size: '180x100'), "/" %>
 
   </header>
   <div class="items-sell-main">
@@ -57,7 +57,7 @@
       <li><a href="#">プライバシーポリシー</a></li>
       <li><a href="#">MoCoty利用規約</a></li>
     </ul>
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
+    <%= link_to image_tag('logo2.png' , size: '150x90'), "/" %>
     <p class="inc">
       ©︎Mocoty,Inc.
     </p>
