--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 <div class='main'>
 
-  <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
+  <%# 画面上部の帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
       気になるお金のこと、
@@ -14,9 +14,9 @@
       コミュニティーサイトです
     </p>
   </div>
-  <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
+  <%# /画面上部の帯部分  %>
   
-  <%# FURIMAの特徴 %>
+  <%# Mocotyの特徴 %>
    <div class='feature-contents'>
     <h2 class='title'>
       Mocotyの活用方法
@@ -28,30 +28,33 @@
           お金のお悩みを共有できる
         </h3>
         <p class='feature-list-description'>
-          スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
+          「資産形成を真剣に考えたい」「投資をしたい」でも、どうしたら良いか分からない・・
+          そんな時は疑問や悩みを投稿してみよう！
         </p>
       </li>
       <li class='list'>
         <%= image_tag "image2.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          売上金は即日振込みに対応
+          Mocotyのユーザーからコメントが寄せられる
         </h3>
         <p class='feature-list-description'>
-          午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします。
+          Mocotyには資産形成や投資に興味があるユーザやお金のプロも多数登録。
+          投稿に対して、コメントやアドバイスを貰うことができます。
         </p>
       </li>
       <li class='list'>
         <%= image_tag "image3.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          様々な支払いに対応
+          悩みや疑問を解決して、行動してみよう！
         </h3>
         <p class='feature-list-description'>
-          お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
+          疑問や不安を解決できたら、将来の為、理想の生活を実現する為の
+          一歩を踏み出してみよう！
         </p>
       </li>
     </ul>
   </div>
-  <%# /FURIMAの特徴 %>
+  <%# /Mocotyの特徴 %>
 
   <%# 画面中央の「会員数日本一位」帯部分 %>
   <div class='ad-contents'>
