--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -116,13 +116,11 @@
   </div>
   <%# /FURIMAが選ばれる3つの理由部分 %>
 
-  <%# 商品一覧 %>
+  <%# 最新投稿 %>
   <div class='item-contents'>
     <h2 class='title'>投稿記事</h2>
     <%= link_to '新規投稿記事', "#", class: "subtitle" %>
     <ul class='item-lists'>
-
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @posts.each do |post| %>
       <li class='list'>
         <%= link_to post_path(post.id) do %>
