--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -61,16 +61,37 @@
       </button>
     </form>
   </div>
-  <div class="links">
+
+ <div>
+  <h4>コメント</h4>
+    <div id="comments_area"><!-- #① -->
+      <% comments.each do |comment| %>
+       <% unless comment.id.nil? %>
+       <p><%= link_to "#{comment.user.name}さん", user_path(comment.user.id) %></p>
+       <p>コメント：<%= comment.content %></p>
+       <% if comment.user == current_user %>
+      <p><%= link_to 'コメントを削除する', post_comment_path(comment.post_id, comment.id), method: :delete, remote: true %></p>
+       <% end %>
+      <% end %>
+     <% end %>
+</div>  
+    <% if user_signed_in? %>
+      <!-- コメント入力欄をブログの詳細ページに表示するためのrender -->
+      <%= render partial: 'comments/form', locals: { comment: @comment, post: @post } %>
+    <% end %>
+  </div>
+
+  
+  <%# <div class="links">
     <a href="#" class="change-item-btn">
       ＜ 前の商品
     </a>
     <a href="#" class="change-item-btn">
       後ろの商品 ＞
     </a>
-  </div>
+  </div> %>
   <%# 詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
-  <a href="#" class="another-item"><%= "商品のカテゴリー名" %>をもっと見る</a>
+  <%# <a href="#" class="another-item"><%= "商品のカテゴリー名" %><%#をもっと見る</a> %>
   <%# //詳細ページで表示されている商品のカテゴリー名を表示しましょう %>
 </div>
 
