--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -65,7 +65,7 @@
  <div>
   <h4>コメント</h4>
     <div id="comments_area"><!-- #① -->
-      <% comments.each do |comment| %>
+      <% @comment.each do |comment| %>
        <% unless comment.id.nil? %>
        <p><%= link_to "#{comment.user.name}さん", user_path(comment.user.id) %></p>
        <p>コメント：<%= comment.content %></p>
