--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -16,7 +16,7 @@
       <%# コントローラーでjsファイルを探す設定 %>
     <% end %>
     <!--コメントへの返信 -->
-    <%= render partilal: 'comment_replies/index', locals: { comment: comment} %>
+    <%# <%= render partilal: 'comment_replies/index', locals: { comment: comment} %> 
       </div>
     </div>
   <% end %>
