--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -56,65 +56,22 @@
   </div>
   <%# /Mocotyの特徴 %>
 
-  <%# 画面中央の「会員数日本一位」帯部分 %>
+  <%# 画面中央の帯部分 %>
   <div class='ad-contents'>
     <h2 class='ad-title'>
-      会員数日本一位
+      早速投稿記事を見てみよう！
     </h2>
     <p class='ad-explain'>
-      FURIMAは、フリマアプリで最も人気。
+      Mocotyの投稿記事の検索で、みんながどんなことで悩んでいるのか分かるので、
     </p>
     <p class='ad-explain'>
-      出品・購入回数も業界最多です！
+      同じような悩みを持ったユーザーと交流を持つ事ができます。
     </p>
     <p class='ad-explain'>
-      ほしかったあの商品に出会えるかもしれません。
+      あなたの体験やお悩みも投稿してみましょう！
     </p>
   </div>
-  <%# /画面中央の「会員数日本一位」帯部分 %>
-
-    <%# FURIMAが選ばれる3つの理由部分 %>
-  <div class='select-reason-contents'>
-    <h2 class='title'>
-      FURIMAが選ばれる3つの理由
-    </h2>
-    <ul class='reason-lists'>
-      <li class='list'>
-        <%= image_tag "furima-intro01.png", class:"list-pict" %>
-        <span class='reason-list-number'>1</span>
-        <h3 class='reason-list-text'>
-          <span class='reason-list-blue-text'>3分</span>
-          ですぐに出品
-        </h3>
-        <p class='reason-list-description'>
-          スマホで入力するだけで簡単に出品できる！
-        </p>
-      </li>
-      <li class='list'>
-        <%= image_tag "furima-intro02.png", class:"list-pict" %>
-        <span class='reason-list-number'>2</span>
-        <h3 class='reason-list-text'>
-          <span class='reason-list-blue-text'>シンプル</span>
-          で使いやすい
-        </h3>
-        <p class='reason-list-description'>
-          めんどくさい入力は必要なく、検索も購入もスムーズ！
-        </p>
-      </li>
-      <li class='list'>
-        <%= image_tag "furima-intro03.png", class:"list-pict" %>
-        <span class='reason-list-number'>3</span>
-        <h3 class='reason-list-text'>
-          手数料
-          <span class='reason-list-blue-text'>業界最安</span>
-        </h3>
-        <p class='reason-list-description'>
-          10%でお得に出品&購入！
-        </p>
-      </li>
-    </ul>
-  </div>
-  <%# /FURIMAが選ばれる3つの理由部分 %>
+  <%# /画面中央の帯部分 %>
 
   <%# 最新投稿 %>
   <div class='item-contents'>
