--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -202,7 +202,7 @@ a {
 /* 投稿記事一覧 */
 
 .item-contents {
-  background-color: #FFF;
+  background-color: rgb(248, 246, 246);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -233,7 +233,9 @@ a {
 .item-lists>.list {
   width: 80vh;
   padding: 1vw;
-  background-color: #FFF;
+  background-color: #fff;
+  margin: 10px;
+  border: 2px solid #dedede;
 }
 
 .item-info {
