--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -11,7 +11,7 @@
     </p>
     <p>コメント：<%= comment.text %></p>
     <% if comment.user == current_user %>
-      <p><%= link_to 'コメントを削除する', post_comment_path(comment.post_id, comment.id), 
+      <p><%= link_to '削除', post_comment_path(comment.post_id, comment.id), 
       method: :delete, remote: true %></p>   
       <%# コントローラーでjsファイルを探す設定 %>
     <% end %>
