--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -73,7 +73,7 @@
   </div>
   <%# /画面中央の帯部分 %>
 
-  <%# 最新投稿 %>
+  <%# 投稿投稿 %>
   <div class='item-contents'>
     <h2 class='title'>投稿記事</h2>
     <%= link_to '新規投稿記事', "#", class: "subtitle" %>
@@ -87,27 +87,15 @@
           </h3>
           <div class='item-price'>
             <span><%= post.title %><br><%= post.article %></span>
-            <%# <div class='star-btn'>
-              <%# <%= image_tag "star.png", class:"star-icon" %>
-              <%# <span class='star-count'>0</span> %>
-            <%# </div> %> 
           </div>
         </div>
         <% end %>
       </li>
       <% end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
     </ul>
   </div>
-  <%# /商品一覧 %>
+  <%# /投稿一覧 %>
 </div>
-<%= link_to(new_post_path, class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>投稿する</span>
-  <%= image_tag 'btn.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-<% end %>
-<a href="/trial_lessons" target="blank" class="trial-button__2-aYI trial-button__3AyRu">
-  </div>
-</a>
 <%= render "shared/footer" %>
 
 
