--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -201,21 +201,21 @@ a {
 
 /* 投稿記事一覧 */
 
-.item-contents {
-  background-color: rgb(248, 246, 246);
+.post-contents {
+  background-color: #FFF;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10vh 0;
 }
 
-.item-contents>.title {
+.post-contents>.title {
   font-size: 5vh;
   line-height: 1.4;
   font-weight: bold;
 }
 
-.item-contents>.subtitle {
+.post-contents>.subtitle {
   font-size: 3vh;
   margin: 1vh 0;
   text-decoration: none;
@@ -223,14 +223,14 @@ a {
   font-weight: bold;
 }
 
-.item-lists {
-  width: 100vw;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.post-lists {
+  // width: 100vw;
+  // display: flex;
+  // flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.item-lists>.list {
+.post-lists>.list {
   width: 80vh;
   padding: 1vw;
   background-color: #fff;
@@ -238,23 +238,20 @@ a {
   border: 2px solid #dedede;
 }
 
-.item-info {
+.post-info {
   background-color: #FFF;
   color: black;
   padding: 1vw;
 }
 
-.item-name {
+.post-name {
   font-size: 2vh;
 }
 
-.item-price {
+.post-article {
   font-size: 2vh;
   display: flex;
   justify-content: space-between;
 }
 
-
-
-
-/* //商品一覧 */
+/* //投稿一覧 */
