--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -74,19 +74,26 @@
   <%# /画面中央の帯部分 %>
 
   <%# 投稿投稿 %>
-  <div class='item-contents'>
+  <div class='post-contents'>
     <h2 class='title'>投稿記事</h2>
     <%= link_to '新規投稿記事', "#", class: "subtitle" %>
-    <ul class='item-lists'>
+  <div class='post-contents'>
+    <ul class='post-lists'>
       <% @posts.each do |post| %>
       <li class='list'>
         <%= link_to post_path(post.id) do %>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= post.category.name %>
+        <div class='post-info'>
+          <h3 class='post-nickname'>
+            投稿者 : <%= post.user.nickname %>
           </h3>
-          <div class='item-price'>
-            <span><%= post.title %><br><%= post.article %></span>
+          <h3 class='post-occupation'>
+            職業 : <%= post.user.occupation %>
+          </h3>
+          <h3 class='post-name'>
+            カテゴリー : <%= post.category.name %>
+          </h3>
+          <div class='post-article'>
+            <span>タイトル：  <%= post.title %><br><%= post.article %></span>
           </div>
         </div>
         <% end %>
@@ -94,6 +101,13 @@
       <% end %>
     </ul>
   </div>
+  <%= link_to(new_post_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>投稿する</span>
+  <%= image_tag 'btn.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+  <% end %>
+  <a href="/trial_lessons" target="blank" class="trial-button__2-aYI trial-button__3AyRu">
+  </div>
+  </a>
   <%# /投稿一覧 %>
 </div>
 <%= render "shared/footer" %>
