--- a/app/assets/stylesheets/posts/comment.css
+++ b/app/assets/stylesheets/posts/comment.css
@@ -74,3 +74,72 @@ div {
   margin: 0 0 1em 0;
 }
 
+.comment-title {
+  font-size: 1.5rem;
+}
+
+
+.comment-card {
+  background-color: #f8f8f8;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5vh 0;
+}
+
+.comment-area {
+  width: 100vw;
+  align-items: center;
+}
+
+.comment-space {
+  background-color: #fff;
+  width: 80vw;
+}
+
+.comment-box {
+  width: 40vw;
+  background-color: #fff;
+  margin: 5vh 0;
+  text-align: center;
+}
+
+.comment-text {
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  border: solid 2px #dedede;
+  resize: none;
+}
+
+
+.form-control {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.standard-button {
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  border-radius: 40px;
+  min-width: 200px;
+  background-color: #dedede;
+  color :#000;
+  border: 2px solid #dedede;
+  margin: 10px 0px;
+  padding: 1vh 7vw;
+}
+
+.standard-button:hover{
+  color:rgba(255, 255, 255, 1);
+  background-color:#FF69A3;
+  background-position: -100% 100%;
+  border:1px solid #FF69A3;
+}
+
