--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -72,24 +72,7 @@
 
 /* /共通 */
 
-/* 出品画像 */
-.img-upload {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 2vh 0;
-}
 
-.click-upload {
-  margin: 15px 0;
-  min-width: 250px;
-}
-
-.click-upload>p {
-  margin-bottom: 15px;
-}
-
-/* /出品画像 */
 
 /* 商品名と商品説明 */
 .new-items {
@@ -155,6 +138,7 @@
   height: 50px;
   font-size: 14px;
   margin-bottom: 4vh;
+  border-radius: 40px;
 }
 
 .back-btn {
@@ -163,6 +147,7 @@
   color: #fff;
   padding: 15px 35%;
   text-decoration: none;
+  border-radius: 40px;
 }
 
 /* /下部ボタン */
