--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -1,7 +1,7 @@
 /* 投稿記事詳細 */
 
 .item-show {
-  background-color: #f8f8f8;
+  background-color: #fff;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -12,8 +12,8 @@
 .item-box {
   background-color: #FFF;
   width: 70vw;
-  min-width: 1200px;
-  padding: 10vh 15vw;
+  min-width: 1100px;
+  padding: 5vh 15vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -89,6 +89,7 @@
   overflow-wrap: anywhere;
 }
 
+
 .detail-table {
   margin-bottom: 30px;
   width: 100%;
@@ -103,7 +104,7 @@
 }
 
 .detail-value {
-  width: 80%;
+  width: 100%;
   padding: 20px;
   border: 1px solid #dedede;
   font-size: 14px;
@@ -122,6 +123,13 @@
   padding: 20px;
   border: 1px solid #dedede;
   font-size: 14px;
+}
+
+.comments_form_area {
+  width: 70%;
+  padding: 16px 16px 8px;
+  font-size: 16px;
+
 }
 
 
