--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: [post, comment] ) do |form| %>
   <div class="row"> 
    <div class="form-grop col-md-10">
-     <%= form.text_area :text, :placeholder => 'コメントしてみましょう！', class:'form-control' %>
+     <%= form.text_area :text, :placeholder => 'コメントしてみましょう！', class:'form-control',rows:"7" ,maxlength:"1000" %>
    </div>
    <div class="actions clo-md-2">
      <%= form.submit "コメント投稿", class:"btn btn-sm standard-button" %>
