--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,8 @@
 <div class="item-show">
   <div class="item-box">
     <div class="post-explain-box">
-      <span><%= "投稿記事" %></span>
+      <div class="post-title">
+       <%= @post.user.nickname %>さんの投稿記事</div>
     </div>
     <table class="detail-table">
       <tbody>
