--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <div class='search-bar-contents'>
     <%= link_to image_tag("logo1.png", class:"furima-icon"), "/" %>
     <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
+      <input class='input-box' placeholder='気になる投稿記事をキーワードから探そう'>
       <button class="search-button">
         <%= image_tag "search.png", class:"search-icon" %>
       </button>
@@ -11,8 +11,6 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in? %>
