--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("logo1.png", class:"furima-icon"), "/" %>
+    <%= link_to image_tag("logow.png", class:"furima-icon"), "/" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='気になる投稿記事をキーワードから探そう'>
       <button class="search-button">
